// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLEAR_REG_CART_INFERRED_FIELDS clears inferred fields in regcart 1`] = `
Object {
  "eventRegistrations": Object {
    "00000000-0000-0000-0000-000000000001": Object {
      "attendee": Object {
        "attendeeId": "aac17ae9-74b8-4687-ae9e-e2781d247f95",
        "personalInformation": Object {
          "emailAddress": "lroling-384934@j.mail",
          "firstName": "Luke",
          "lastName": "Roling",
          "primaryAddressType": "WORK",
        },
      },
      "attendeeType": "ATTENDEE",
      "eventId": "dd48b4c4-672e-431c-be8d-5abfec299844",
      "eventRegistrationId": "00000000-0000-0000-0000-000000000001",
      "productRegistrations": Array [
        Object {
          "productId": "c0215717-5640-4e9d-b790-36047f14bf21",
          "productType": "AdmissionItem",
          "quantity": 1,
          "requestedAction": "REGISTER",
        },
      ],
      "registrationTypeId": "aDummyId",
    },
  },
  "pendingProductSelection": "",
  "regCartId": "928f02df-4ba7-4637-824d-ae71bd414e4f",
  "status": "COMPLETED",
}
`;

exports[`CREATE_REG_CART_SUCCESS sets empty cart to new reg cart 1`] = `
Object {
  "eventRegistrations": Object {
    "00000000-0000-0000-0000-000000000001": Object {
      "attendee": Object {
        "attendeeId": "aac17ae9-74b8-4687-ae9e-e2781d247f95",
        "personalInformation": Object {
          "contactId": "d10d9eab-743f-4b3e-80ee-adb520920281",
          "emailAddress": "lroling-384934@j.mail",
          "firstName": "Luke",
          "lastName": "Roling",
          "primaryAddressType": "WORK",
        },
      },
      "attendeeType": "ATTENDEE",
      "eventId": "dd48b4c4-672e-431c-be8d-5abfec299844",
      "eventRegistrationId": "00000000-0000-0000-0000-000000000001",
      "productRegistrations": Array [
        Object {
          "productId": "c0215717-5640-4e9d-b790-36047f14bf21",
          "productType": "AdmissionItem",
          "quantity": 1,
          "requestedAction": "REGISTER",
        },
      ],
      "registrationTypeId": "00000000-0000-0000-0000-000000000000",
    },
  },
  "pendingProductSelection": "",
  "regCartId": "928f02df-4ba7-4637-824d-ae71bd414e4f",
  "status": "COMPLETED",
}
`;

exports[`FINALIZE_CHECKOUT_SUCCESS updates the present cart 1`] = `
Object {
  "eventRegistrations": Object {
    "00000000-0000-0000-0000-000000000001": Object {
      "attendee": Object {
        "attendeeId": "aac17ae9-74b8-4687-ae9e-e2781d247f95",
        "personalInformation": Object {
          "contactId": "d10d9eab-743f-4b3e-80ee-adb520920281",
          "emailAddress": "lroling-384934@j.mail",
          "firstName": "Luke",
          "lastName": "Roling",
          "primaryAddressType": "WORK",
        },
      },
      "attendeeType": "ATTENDEE",
      "eventId": "dd48b4c4-672e-431c-be8d-5abfec299844",
      "eventRegistrationId": "00000000-0000-0000-0000-000000000001",
      "productRegistrations": Array [
        Object {
          "productId": "c0215717-5640-4e9d-b790-36047f14bf21",
          "productType": "AdmissionItem",
          "quantity": 1,
          "requestedAction": "REGISTER",
        },
      ],
      "registrationTypeId": "00000000-0000-0000-0000-000000000000",
    },
  },
  "pendingProductSelection": "",
  "regCartId": "928f02df-4ba7-4637-824d-ae71bd414e4f",
  "status": "COMPLETED",
}
`;

exports[`LOG_OUT_REGISTRANT_SUCCESS does not change default cart 1`] = `
Object {
  "eventRegistrations": Object {},
  "regCancel": false,
  "regCartId": "",
  "regDecline": false,
  "regMod": false,
}
`;

exports[`LOG_OUT_REGISTRANT_SUCCESS sets present cart to default. 1`] = `
Object {
  "eventRegistrations": Object {},
  "regCancel": false,
  "regCartId": "",
  "regDecline": false,
  "regMod": false,
}
`;

exports[`UPDATE_REG_CART_SUCCESS sets the present cart with saved information 1`] = `
Object {
  "eventRegistrations": Object {
    "00000000-0000-0000-0000-000000000001": Object {
      "attendee": Object {
        "attendeeId": "aac17ae9-74b8-4687-ae9e-e2781d247f95",
        "personalInformation": Object {
          "contactId": "d10d9eab-743f-4b3e-80ee-adb520920281",
          "emailAddress": "lroling-384934@j.mail",
          "firstName": "Luke",
          "lastName": "Roling",
          "primaryAddressType": "WORK",
        },
      },
      "attendeeType": "ATTENDEE",
      "eventId": "dd48b4c4-672e-431c-be8d-5abfec299844",
      "eventRegistrationId": "00000000-0000-0000-0000-000000000001",
      "productRegistrations": Array [
        Object {
          "productId": "c0215717-5640-4e9d-b790-36047f14bf21",
          "productType": "AdmissionItem",
          "quantity": 1,
          "requestedAction": "REGISTER",
        },
      ],
      "registrationTypeId": "00000000-0000-0000-0000-000000000000",
    },
  },
  "pendingProductSelection": "",
  "regCartId": "928f02df-4ba7-4637-824d-ae71bd414e4f",
  "status": "COMPLETED",
}
`;

exports[`UPDATE_REG_CART_SUCCESS updates the present cart 1`] = `
Object {
  "eventRegistrations": Object {
    "00000000-0000-0000-0000-000000000001": Object {
      "attendee": Object {
        "attendeeId": "aac17ae9-74b8-4687-ae9e-e2781d247f95",
        "personalInformation": Object {
          "contactId": "d10d9eab-743f-4b3e-80ee-adb520920281",
          "emailAddress": "lroling-384934@j.mail",
          "firstName": "test",
          "lastName": "test",
          "primaryAddressType": "WORK",
        },
      },
      "attendeeType": "ATTENDEE",
      "eventId": "dd48b4c4-672e-431c-be8d-5abfec299844",
      "eventRegistrationId": "00000000-0000-0000-0000-000000000001",
      "productRegistrations": Array [
        Object {
          "productId": "c0215717-5640-4e9d-b790-36047f14bf21",
          "productType": "AdmissionItem",
          "quantity": 1,
          "requestedAction": "REGISTER",
        },
      ],
      "registrationTypeId": "00000000-0000-0000-0000-000000000000",
    },
  },
  "pendingProductSelection": "",
  "regCartId": "928f02df-4ba7-4637-824d-ae71bd414e4f",
  "status": "COMPLETED",
}
`;

exports[`Verifying initial state. 1`] = `
Object {
  "eventRegistrations": Object {},
  "regCancel": false,
  "regCartId": "",
  "regDecline": false,
  "regMod": false,
}
`;
